# Netmax_data_science

./: README.md
Netmax_RAG/: app.py  pyproject.toml
Netmax_RAG/api/: chatgpt_client.py
Netmax_RAG/data/: embedding_service.py  vector_store_service.py
Netmax_RAG/ui/: chat_interface.py  sidebar.py
